fixtures/semantic/invalid/recovery/broken-expression.php
<?php
$value = 1 + ;
echo $value;
